# discord-music-player

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  shell.nix
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  docker-publish.yml
src/: common.rs  event_handler.rs  groups.rs  main.rs
src/audio_manager/: cache_manager.rs  link_handler.rs  mod.rs  songs.rs  utils.rs  yt_dl_wrapper.rs
src/cache_manager/: cache_saver.rs  cached_song.rs  mod.rs
src/commands/: bot.rs  logger.rs  mod.rs  player.rs  queue.rs  utils.rs
src/queue_manager/: mod.rs  player.rs  queue.rs  queue_saver.rs  saved_queue.rs
