[package]
name = "discord_music_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "^0.1"
tracing-subscriber = "^0.3"
dotenv = "^0.15"
serde_json = "^1.0"
serde = "^1.0"
rand = "^0.8"
chrono = "^0.4"
regex = "^1.10"
async-trait = "^0.1"
serenity = "^0.12"
tokio = { version = "^1.36", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
] }
youtube_dl = { version = "^0.9", features = ["tokio"] }
songbird = { version = "^0.4.0", features = ["serenity", "driver"] }
symphonia = { version = "^0.5", features = ["all"] }
reqwest = "^0.11"
