[package]
name = "discord_music_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "^0.1"
tracing-subscriber = "^0.3"
dotenv = "^0.15"
serde_json = "^1.0"
serde = "^1.0"
rand = "^0.8"
chrono = "^0.4"
regex = "^1.11"
async-trait = "^0.1"
serenity = { version = "^0.12", features = ["cache", "chrono", "command_attr", "framework", "gateway", "levenshtein", "rustls_backend", "static_assertions", "uwl"], default-features = false }
tokio = { version = "^1.41", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
] }
youtube_dl = { version = "^0.10", features = ["tokio"] }
songbird = { version = "^0.4.3", features = ["serenity", "driver"] }
symphonia = { version = "^0.5", features = ["all"] }
reqwest = "^0.11"
poise = "0.6.1"
